Career page updated again for a cleaner layout

--- a/karriar/index.html
+++ b/karriar/index.html
@@ -242,46 +242,49 @@
 		<div class="stripe s4"></div>
 	</div>
 	<!-- HEADER -->
-	<section class="slide" id="career" style="background: transparent;">
-		<div class="content">
-			<div class="container">
+	<section class="slide form-section" id="career" style="background: transparent;">
+		<h1 class="common-IntroText center" style="margin-top: 80px;">Sveriges ledande entreprenadbesiktningsföretag
+			<br>söker fler
+			besiktningsmän!</h1>
+		<div class="container-lg">
 
-				<div class="container-lg center margin-top-1">
-					<h1 class="common-IntroText">Sveriges ledande entreprenadbesiktningsföretag <br>söker fler
-						besiktningsmän!</h1>
-					<div class="">
-						<h2 class="common-BodyTitle">Vill du...</h2>
-						<p class="common-BodyText">• Utveckla din kompetens i ett trivsamt och intressant företag?
-						</p>
-						<p class="common-BodyText">• Arbeta i det företag som leder branschens förnyelse?</p>
-						<p class="common-BodyText">• Kunna belönas bra för ambitiösa arbetsinsatser?</p>
-						<p class="common-BodyText">• Bli medarbetare oavsett var i landet du bor?</p>
-					</div>
-				</div>
-
-				<div class="formBackground form-column fix-5-12" style="margin-top: 30px;">
-					<h3 class="pad-header margin-0 center common-BodyTitle"
-						style="border-bottom: 1px solid #e3e8ee;background: #fff;border-top-left-radius: 10px;border-top-right-radius: 10px;">
-						Ta kontakt med oss!
-					</h3>
-					<div>
-						<div style="padding:24px 18px 20px 24px;background-color: #f7fafc;text-align: left;">
-							<!--[if lte IE 8]>
+			<div class="formBackground form-column" style="margin-top: 30px;">
+				<h3 class="pad-header margin-0 center common-BodyTitle"
+					style="border-bottom: 1px solid #e3e8ee;background: #fff;border-top-left-radius: 10px;border-top-right-radius: 10px;">
+					Ta kontakt med oss!
+				</h3>
+				<div>
+					<div style="padding:24px 18px 20px 24px;background-color: #f7fafc;text-align: left;">
+						<!--[if lte IE 8]>
 							<script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2-legacy.js"></script>
 							<![endif]-->
-							<script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2.js"></script>
-							<script>
-								hbspt.forms.create({
-									portalId: "4367163",
-									formId: "579fb936-22da-4909-bdbb-694fdab37be5"
-								});
-							</script>
-						</div>
-						<footer></footer>
+						<script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2.js"></script>
+						<script>
+							hbspt.forms.create({
+								portalId: "4367163",
+								formId: "579fb936-22da-4909-bdbb-694fdab37be5"
+							});
+						</script>
 					</div>
+					<footer></footer>
 				</div>
-
 			</div>
+			<div class="secondary-column">
+				<div class="customers">
+					<h2 class="common-BodyTitle">Vill du...</h2>
+					<p class="common-BodyText left">
+						<img src="../assets/svg/checkmark_white_sm.svg" alt="" style="width: 32px;">
+						Utveckla din kompetens i ett trivsamt och intressant företag?
+					</p>
+					<p class="common-BodyText left"><img src="../assets/svg/checkmark_white_sm.svg" alt=""
+							style="width: 32px;">Arbeta i det företag som leder branschens förnyelse?</p>
+					<p class="common-BodyText left"><img src="../assets/svg/checkmark_white_sm.svg" alt=""
+							style="width: 32px;">Kunna belönas bra för ambitiösa arbetsinsatser?</p>
+					<p class="common-BodyText left"><img src="../assets/svg/checkmark_white_sm.svg" alt=""
+							style="width: 32px;">Bli medarbetare oavsett var i landet du bor?</p>
+				</div>
+			</div>
+
 		</div>
 	</section>
 	<!-- Footer -->
