Career page icons aligned

--- a/karriar/index.html
+++ b/karriar/index.html
@@ -272,16 +272,27 @@
 			<div class="secondary-column">
 				<div class="customers">
 					<h2 class="common-BodyTitle">Vill du...</h2>
-					<p class="common-BodyText left">
-						<img src="../assets/svg/checkmark_white_sm.svg" alt="" style="width: 32px;">
-						Utveckla din kompetens i ett trivsamt och intressant företag?
-					</p>
-					<p class="common-BodyText left"><img src="../assets/svg/checkmark_white_sm.svg" alt=""
-							style="width: 32px;">Arbeta i det företag som leder branschens förnyelse?</p>
-					<p class="common-BodyText left"><img src="../assets/svg/checkmark_white_sm.svg" alt=""
-							style="width: 32px;">Kunna belönas bra för ambitiösa arbetsinsatser?</p>
-					<p class="common-BodyText left"><img src="../assets/svg/checkmark_white_sm.svg" alt=""
-							style="width: 32px;">Bli medarbetare oavsett var i landet du bor?</p>
+					<div>
+						<img src="../assets/svg/checkmark_white_sm.svg" alt="" style="width: 32px;float: left;margin-right: 8px;">
+						<p class="common-BodyText left">
+							Utveckla din kompetens i ett trivsamt och intressant företag?
+						</p>
+					</div>
+					<div>
+						<img src="../assets/svg/checkmark_white_sm.svg" alt="" style="width: 32px;float: left;margin-right: 8px;">
+						<p class="common-BodyText left">Arbeta i
+							det företag som leder branschens förnyelse?</p>
+					</div>
+					<div>
+						<img src="../assets/svg/checkmark_white_sm.svg" alt="" style="width: 32px;float: left;margin-right: 8px;">
+						<p class="common-BodyText left">Kunna
+							belönas bra för ambitiösa arbetsinsatser?</p>
+					</div>
+					<div>
+						<img src="../assets/svg/checkmark_white_sm.svg" alt="" style="width: 32px;float: left;margin-right: 8px;">
+						<p class="common-BodyText left">Bli
+							medarbetare oavsett var i landet du bor?</p>
+					</div>
 				</div>
 			</div>
 
