--- a/karriar/index.html
+++ b/karriar/index.html
@@ -247,7 +247,36 @@
 			<br>söker fler
 			besiktningsmän!</h1>
 		<div class="container-lg">
-
+			<div class="secondary-column">
+				<div class="customers">
+					<h2 class="common-BodyTitle">Vill du...</h2>
+					<div>
+						<img src="../assets/svg/checkmark_white_sm.svg" alt=""
+							style="width: 32px;float: left;margin-right: 8px;">
+						<p class="common-BodyText left">
+							Utveckla din kompetens i ett trivsamt och intressant företag?
+						</p>
+					</div>
+					<div>
+						<img src="../assets/svg/checkmark_white_sm.svg" alt=""
+							style="width: 32px;float: left;margin-right: 8px;">
+						<p class="common-BodyText left">Arbeta i
+							det företag som leder branschens förnyelse?</p>
+					</div>
+					<div>
+						<img src="../assets/svg/checkmark_white_sm.svg" alt=""
+							style="width: 32px;float: left;margin-right: 8px;">
+						<p class="common-BodyText left">Kunna
+							belönas bra för ambitiösa arbetsinsatser?</p>
+					</div>
+					<div>
+						<img src="../assets/svg/checkmark_white_sm.svg" alt=""
+							style="width: 32px;float: left;margin-right: 8px;">
+						<p class="common-BodyText left">Bli
+							medarbetare oavsett var i landet du bor?</p>
+					</div>
+				</div>
+			</div>
 			<div class="formBackground form-column" style="margin-top: 30px;">
 				<h3 class="pad-header margin-0 center common-BodyTitle"
 					style="border-bottom: 1px solid #e3e8ee;background: #fff;border-top-left-radius: 10px;border-top-right-radius: 10px;">
@@ -269,32 +298,7 @@
 					<footer></footer>
 				</div>
 			</div>
-			<div class="secondary-column">
-				<div class="customers">
-					<h2 class="common-BodyTitle">Vill du...</h2>
-					<div>
-						<img src="../assets/svg/checkmark_white_sm.svg" alt="" style="width: 32px;float: left;margin-right: 8px;">
-						<p class="common-BodyText left">
-							Utveckla din kompetens i ett trivsamt och intressant företag?
-						</p>
-					</div>
-					<div>
-						<img src="../assets/svg/checkmark_white_sm.svg" alt="" style="width: 32px;float: left;margin-right: 8px;">
-						<p class="common-BodyText left">Arbeta i
-							det företag som leder branschens förnyelse?</p>
-					</div>
-					<div>
-						<img src="../assets/svg/checkmark_white_sm.svg" alt="" style="width: 32px;float: left;margin-right: 8px;">
-						<p class="common-BodyText left">Kunna
-							belönas bra för ambitiösa arbetsinsatser?</p>
-					</div>
-					<div>
-						<img src="../assets/svg/checkmark_white_sm.svg" alt="" style="width: 32px;float: left;margin-right: 8px;">
-						<p class="common-BodyText left">Bli
-							medarbetare oavsett var i landet du bor?</p>
-					</div>
-				</div>
-			</div>
+
 
 		</div>
 	</section>
