Layout fixes for the new forms

--- a/karriar/index.html
+++ b/karriar/index.html
@@ -243,7 +243,7 @@
 	</div>
 	<!-- HEADER -->
 	<section class="slide form-section" id="career" style="background: transparent;">
-		<h1 class="common-IntroText center" style="margin-top: 80px;">Sveriges ledande entreprenadbesiktningsföretag
+		<h1 class="common-IntroText center margin-top-10">Sveriges ledande entreprenadbesiktningsföretag
 			<br>söker fler
 			besiktningsmän!</h1>
 		<div class="container-lg">
@@ -277,13 +277,12 @@
 					</div>
 				</div>
 			</div>
-			<div class="formBackground form-column" style="margin-top: 30px;">
-				<h3 class="pad-header margin-0 center common-BodyTitle"
-					style="border-bottom: 1px solid #e3e8ee;background: #fff;border-top-left-radius: 10px;border-top-right-radius: 10px;">
+			<div class="pad formBackground form-column" style="margin-top: 30px;">
+				<h3 class="pad-header margin-0 center common-BodyTitle">
 					Ta kontakt med oss!
 				</h3>
 				<div>
-					<div style="padding:24px 18px 20px 24px;background-color: #f7fafc;text-align: left;">
+					<div class="form-bg-offset">
 						<!--[if lte IE 8]>
 							<script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2-legacy.js"></script>
 							<![endif]-->
