--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -241,19 +241,17 @@
 		<div class="stripe s3"></div>
 		<div class="stripe s4"></div>
 	</div>
-	<section class="slide form-section margin-top-1" data-name="boka" name="boka" data-title="boka" id="boka"
+	<section class="slide form-section" data-name="boka" name="boka" data-title="boka" id="boka"
 		style="background: transparent;">
-		<div class="container-lg">
-			<div class="formBackground form-column">
-				<h3 class="pad-header margin-0 center common-BodyTitle" style="border-bottom: 1px solid #e3e8ee;background: #fff;border-top-left-radius: 10px;
-
-                    border-top-right-radius: 10px;">
+		<div class="container-lg margin-top-10">
+			<div class="formBackground form-column pad">
+				<h3 class="pad-header margin-0 center common-BodyTitle">
 					Frågor?
 					<p class="small bold dark margin-0" style="font-size: 16px;">Lämna ett meddelande så hör vi av oss.
 					</p>
 				</h3>
 				<div>
-					<div style="padding:24px 18px 20px 24px;background-color: #f7fafc;">
+					<div class="form-bg-offset">
 						<!--[if lte IE 8]>
 						<script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2-legacy.js"></script>
 						<![endif]-->
