Skanska/boka header updated

--- a/skanska/boka/index.html
+++ b/skanska/boka/index.html
@@ -244,34 +244,43 @@
         <div class="stripe s3"></div>
         <div class="stripe s4"></div>
     </div>
-    <section class="slide form-section" style="background: transparent;margin-top: 80px;" id="bokaskanska">
-        <div class="center margin-0">
-            <h1 class="common-IntroText">
-                Fokusera din dyrbara tid på företagets kärnverksamhet <br>
-                istället för att jaga rätt på en besiktning.</h1>
-            <p class="common-BodyText">
-                Med Besiktningsman.se sker alla besiktningar digitalt,
-                <br>
-                vilket innebär protokol samma dag för omedelbar avhjälpning.
-                <br>
-                Spara tid och huvudvärk genom att minimera pappersarbete.
-                <br>
-                Få översikt på vad som är gjort eller inte med iSpects Återrapportering!</p>
-            <br>
-            <p class="common-Link">
-                <a href="tel:0101654000">Skulle ni ha fler frågor kan ni ringa oss
-                    <br>
-                    på 010-165 40 00
-                </a>
-            </p>
-            <hr>
-
+    <section class="slide form-section" style="background: transparent;" id="bokaskanska">
+        <div class="content">
+            <div class="container-lg center">
+                <div class="wrap">
+                    <h2 class="common-IntroText margin-top-8 margin-bottom-5">Fokusera din dyrbara tid på företagets
+                        kärnverksamhet <br>
+                        istället för att jaga rätt på en besiktning.</h2>
+                    <ul class="flex margin-bottom-5">
+                        <li class="col-4-12">
+                            <img src="../../assets/svg/checkmark_white_sm.svg" alt="Ikon som illusterar bilagor"
+                                style="width:64px;">
+                            <h3 class="equalElement common-BodyTitle">Spara tid och huvudvärk genom att minimera
+                                pappersarbete.</h3>
+                        </li>
+                        <li class="col-4-12">
+                            <img src="../../assets/svg/checkmark_white_sm.svg" alt="Ikon som illusterar bilagor"
+                                style="width:64px;">
+                            <h3 class="equalElement common-BodyTitle">Med Besiktningsman.se sker alla besiktningar
+                                digitalt,
+                                <br>
+                                vilket innebär protokol samma dag för omedelbar avhjälpning.</h3>
+                        </li>
+                        <li class="col-4-12">
+                            <img src="../../assets/svg/checkmark_white_sm.svg" alt="Ikon som illusterar bilagor"
+                                style="width:64px;">
+                            <h3 class="equalElement common-BodyTitle">Få översikt på vad som är gjort eller inte
+                                med iSpects
+                                Återrapportering!</h3>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
-        <div class="container-lg">
-            <div class="formBackground">
-                <h3 class="pad-header margin-0 center common-BodyTitle" style="border-bottom: 1px solid #e3e8ee;background: #fff;border-top-left-radius: 10px;
 
-                    border-top-right-radius: 10px;">
+        <div class="container-lg">
+            <div class="pad formBackground">
+                <h3 class="pad-header margin-0 center common-BodyTitle">
                     Boka besiktning
                 </h3>
                 <div class="">
