Adding classes for the form

--- a/skanska/boka/index.html
+++ b/skanska/boka/index.html
@@ -249,8 +249,7 @@
             <div class="container-lg center">
                 <div class="wrap">
                     <h2 class="common-IntroText margin-top-8 margin-bottom-5">Fokusera din dyrbara tid på företagets
-                        kärnverksamhet <br>
-                        istället för att jaga rätt på en besiktning.</h2>
+                        kärnverksamhet <br>istället för att jaga rätt på en besiktning.</h2>
                     <ul class="flex margin-bottom-5">
                         <li class="col-4-12">
                             <img src="../../assets/svg/checkmark_white_sm.svg" alt="Ikon som illusterar bilagor"
@@ -283,8 +282,8 @@
                 <h3 class="pad-header margin-0 center common-BodyTitle">
                     Boka besiktning
                 </h3>
-                <div class="">
-                    <div class="" style="padding:24px 18px 20px 24px;background-color: #f7fafc;">
+                <div>
+                    <div class="form-bg-offset">
                         <!--[if lte IE 8]>
 <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2-legacy.js"></script>
 <![endif]-->
