--- a/tjanster/brf/garantibesiktning/index.html
+++ b/tjanster/brf/garantibesiktning/index.html
@@ -435,16 +435,15 @@
 				<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 			</div> -->
 			<!-- original typeform -->
-			<div class="formBackground form-column">
-				<h3 class="pad-header margin-0 center common-BodyTitle" style="border-bottom: 1px solid #e3e8ee;background: #fff;border-top-left-radius: 10px;
-
-                    border-top-right-radius: 10px;">
+			<div class="pad formBackground form-column">
+				<h3 class="pad-header margin-0 center common-BodyTitle">
 					Redo att boka?
-					<p class="small bold dark margin-0" style="font-size: 16px;">Lämna ett meddelande så hör vi av oss.
+					<p class="small bold dark margin-0" style="font-size: 16px;">
+						Lämna ett meddelande så hör vi av oss.
 					</p>
 				</h3>
 				<div class="">
-					<div class="" style="padding:24px 18px 20px 24px;background-color: #f7fafc;">
+					<div class="form-bg-offset">
 						<!--[if lte IE 8]>
 						<script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2-legacy.js"></script>
 						<![endif]-->
