--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 										<p>Tillgång till byggfelsstatistik.</p>
 									</li>
 								</ul>
-								<a href="../ispect/" class="common-BodyText">
+								<a href="ispect/" class="common-BodyText">
 									<p class="margin-bottom-2 common-Link">
 										Mer om digitaliserad entreprenadbesiktning <i class="icono-arrow2-left"></i>
 									</p>
@@ -332,7 +332,7 @@
 									<!-- typeform button -->
 									<p class="common-BodyTitle2">Intresserad? Kontakta oss för att komma igång.</p>
 									<a class="common-Button blue text-white margin-bottom-2"
-										href="../tjanster/entreprenad/#boka">
+										href="tjanster/entreprenad/#boka">
 										kontakta oss
 									</a>
 									<a href="tel:0101654000">
@@ -368,28 +368,28 @@
 												<h3>IKANO</h3>
 												<p>BRF Skogsstjärnan</p>
 												<div class="img-fade"></div>
-												<img src="../assets/img/projects/brf_skogsstjernan.jpg"
+												<img src="assets/img/projects/brf_skogsstjernan.jpg"
 													alt="Projektfoto av BRF Skogsstjärnan" />
 											</li>
 											<li>
 												<h3>SKANSKA</h3>
 												<p>BRF The View</p>
 												<div class="img-fade"></div>
-												<img src="../assets/img/projects/brf_theview.jpg"
+												<img src="assets/img/projects/brf_theview.jpg"
 													alt="Projektfoto av BRF The View" />
 											</li>
 											<li>
 												<h3>EINAR MATSSON</h3>
 												<p>BRF Haganova</p>
 												<div class="img-fade"></div>
-												<img src="../assets/img/projects/brf_haganova.jpg"
+												<img src="assets/img/projects/brf_haganova.jpg"
 													alt="Projektfoto av BRF Haganova" />
 											</li>
 											<li>
 												<h3>BYGGVESTA</h3>
 												<p>BRF Terrassen</p>
 												<div class="img-fade"></div>
-												<img src="../assets/img/projects/brf_terrassen.jpg"
+												<img src="assets/img/projects/brf_terrassen.jpg"
 													alt="Projektfoto av BRF Terrassen" />
 											</li>
 										</ul>
@@ -402,7 +402,7 @@
 									</div>
 								</div>
 								<div class="center-m-down">
-									<a class="fromCenter" href="../projekt/">
+									<a class="fromCenter" href="projekt/">
 										<p class="common-Link">Några av våra senaste besiktningsuppdrag</p>
 									</a>
 								</div>
@@ -429,7 +429,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="background" style="background-image:url(../assets/img/backgrounds/construction_pipelines.jpg)"
+		<div class="background" style="background-image:url(assets/img/backgrounds/construction_pipelines.jpg)"
 			alt="Bakgrundsbild av tre hus i Hallstatt, Österrike. Foto av Daniel Frank på Unsplash"></div>
 	</section>
 
@@ -457,7 +457,7 @@
 									slutbesiktning.
 								</p>
 								<div class="section-Links">
-									<a href="../tjanster/entreprenad/">
+									<a href="tjanster/entreprenad/">
 										<p class="common-BodyTitle2 margin-bottom-1">Läs mer om våra tjänster</p>
 										<p class="common-Link">Gå till tjänster för entreprenadbesiktningar<i
 												class="icono-arrow2-left"></i></p>
@@ -496,7 +496,7 @@
 							<li class="col-6-12 left fromRight">
 								<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius"
 									id="landingPagePhotos" height="700" width="1000"
-									src="../assets/img/backgrounds/tunnel.jpg"
+									src="assets/img/backgrounds/tunnel.jpg"
 									alt="Foto av besiktningsman vid inspektion av tunnelbanesystem." />
 							</li>
 						</ul>
@@ -522,7 +522,7 @@
 									nyproduktion och ROT-arbeten, samt KA-Kontrollansvarig, för bostadrättsfastigheter.
 								</p>
 								<div class="section-Links">
-									<a href="../tjanster/brf/">
+									<a href="tjanster/brf/">
 										<p class="common-BodyTitle2 margin-bottom-1">Läs mer om våra tjänster</p>
 										<p class="common-Link">Gå till tjänster för bostadsrättsföreningar<i
 												class="icono-arrow2-left"></i></p>
@@ -560,7 +560,7 @@
 							<li class="col-6-12 left fromRight">
 								<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius"
 									id="landingPagePhotos" width="1000" height="700"
-									src="../assets/img/backgrounds/winter/winter_apartments.jpg"
+									src="assets/img/backgrounds/winter/winter_apartments.jpg"
 									alt="Foto av en BRFs fasad" />
 							</li>
 						</ul>
@@ -596,7 +596,7 @@
 							<li class="col-6-12 left fromRight">
 								<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius"
 									id="landingPagePhotos" width="1000" height="700"
-									src="../assets/img/backgrounds/summer/summer_house.jpg"
+									src="assets/img/backgrounds/summer/summer_house.jpg"
 									alt="Traditionellt sommarhus i svenska skärgården" />
 							</li>
 						</ul>
@@ -620,7 +620,7 @@
 								<p class="common-BodyText">Direkt felavhjälpning, lättillgänglig och säker dokumentation
 									samt noll byggfel.</p>
 								<div class="section-Links">
-									<a href="../ispect">
+									<a href="ispect/">
 										<p class="common-Link">Mer om digitaliserad entreprenadbesiktning<i
 												class="icono-arrow2-left"></i></p>
 									</a>
@@ -649,7 +649,7 @@
 							<li class="col-6-12 left fromRight">
 								<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius"
 									id="landingPagePhotos" width="1000" height="700"
-									src="../assets/img/ispect/bm_ispect_closeup.jpg"
+									src="assets/img/ispect/bm_ispect_closeup.jpg"
 									alt="Besiktningsman med iSpect öppen i sin iPad" />
 							</li>
 						</ul>
@@ -664,11 +664,11 @@
 	<section class="slide whiteSlide" id="footer-nav">
 		<div class="padding-5 center">
 			<a href="https://medium.com/besiktningsbloggen" class="globalFooterCard soft-shadow white">
-				<img src="../assets/img/nyheter/blogpage_card.png"
+				<img src="assets/img/nyheter/blogpage_card.png"
 					alt="besiktningsman.se bloggen - Vi utvecklar och förnyar" />
 			</a>
 			<a href="/nyheter/" class="globalFooterCard soft-shadow white">
-				<img src="../assets/img/nyheter/newspage_card.png"
+				<img src="assets/img/nyheter/newspage_card.png"
 					alt="Länk till våran nyhetssida - Läs mer om vad som sker i besiktningsbranschen här" />
 			</a>
 		</div>
@@ -681,7 +681,7 @@
 				<div class="wrap">
 
 					<div class="fix-12-12 center toCenter fromCenter">
-						<img src="../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="max-width: 400px;"
+						<img src="assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="max-width: 400px;"
 							class="margin-bottom-1">
 						<p class="bold margin-bottom-5" style="margin-bottom: 50px;">Sveriges ledande
 							entreprenadbesiktningsföretag</p>
@@ -696,16 +696,16 @@
 								</li>
 								<li class="col-2-10 col-tablet-1-2 col-phone-1-1 left">
 									<h3 class="margin-bottom-1">Ta reda på mer</h3>
-									<a href="../kontakt/">
+									<a href="kontakt/">
 										<p class="text-blue">Kontakta oss</p>
 									</a>
-									<a href="../om_oss/">
+									<a href="om_oss/">
 										<p class="text-blue">Om oss</p>
 									</a>
-									<a href="../ispect/">
+									<a href="ispect/">
 										<p class="text-blue">iSpect - Digital Besiktningsprocess</p>
 									</a>
-									<a href="../karriar/">
+									<a href="karriar/">
 										<p class="text-blue">Karriär</p>
 									</a>
 									<a href="tel:0101654000">
