--- a/tjanster/entreprenad/slutbesiktning/index.html
+++ b/tjanster/entreprenad/slutbesiktning/index.html
@@ -476,39 +476,29 @@
 	<section class="slide form-section" data-name="boka" name="boka" data-title="boka" id="boka"
 		style="background: #f6f9fc;">
 		<div class="container-lg">
-			<!-- temp typeform fix for mobile -->
-			<!-- <div class="mobileContactButtonFix">
-				<h3>Redo att boka?</h3>
-				<p>Fyll i formuläret så kontaktar vi dig.</p>
-				<a class="typeform-share common-Button blue text-white" href="https://besiktningsman-se.typeform.com/to/lVd1bF" data-mode="popup" target="_blank">Kontakta mig </a>
-				<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
-			</div> -->
-			<!-- original typeform -->
-			<div class="formBackground form-column">
-				<h3 class="pad-header margin-0 center common-BodyTitle">
-					Redo att boka?
-					<p class="small bold dark margin-0" style="font-size: 16px;">Lämna ett meddelande så hör vi av oss.
+			<div class="pad formBackground form-column">
+				<h3 class="pad-header margin-0 common-BodyTitle2 center">
+					Intresserad? Kontakta oss för att komma igång.
+					<p class="common-BodyText margin-0 padding-0">
+						Lämna ett meddelande så
+						hör vi av oss.
 					</p>
 				</h3>
-				<div class="typeform-widget" data-url="https://besiktningsman-se.typeform.com/to/lVd1bF"
-					data-hide-headers=true style="width: 100%; height: 400px;"></div>
-				<script>
-					(function () {
-						var qs, js, q, s, d = document,
-							gi = d.getElementById,
-							ce = d.createElement,
-							gt = d.getElementsByTagName,
-							id = "typef_orm",
-							b = "https://embed.typeform.com/";
-						if (!gi.call(d, id)) {
-							js = ce.call(d, "script");
-							js.id = id;
-							js.src = b + "embed.js";
-							q = gt.call(d, "script")[0];
-							q.parentNode.insertBefore(js, q)
-						}
-					})()
-				</script>
+				<div>
+					<div class="form-bg-offset">
+						<!--[if lte IE 8]>
+<script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2-legacy.js"></script>
+<![endif]-->
+						<script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2.js"></script>
+						<script>
+							hbspt.forms.create({
+								portalId: "4367163",
+								formId: "ef258438-93c8-4ccf-ad12-711f27aa050d"
+							});
+						</script>
+					</div>
+					<footer></footer>
+				</div>
 			</div>
 			<div class="secondary-column">
 				<div class="customers">
@@ -531,8 +521,8 @@
 					</ul>
 				</div>
 			</div>
-
 		</div>
+
 	</section>
 	<!-- about us -->
 	<section class="slide whiteSlide autoHeight" id="omOss">
@@ -737,14 +727,14 @@
 									viewBox="0 0 22 22">
 									<path fill="currentColor"
 										d="M21.5 20.45c0 .636-.32 1.05-.968 1.05h-5.45v-7.946h2.772l.42-3.405h-3.19V8.377c0-.908.25-1.635 1.592-1.635h1.907V4.036c-.583-.04-1.487-.125-2.67-.125-2.463 0-4.33 1.465-4.33 4.156v2.083H8.667v3.404h2.916V21.5H1.48c-.653 0-.98-.414-.98-1.05V1.913C.5 1.278.827.5 1.48.5h19.052c.647 0 .968.778.968 1.413V20.45z" />
-									</svg>
+								</svg>
 							</a>
 							<a class="socialIcons" href="https://twitter.com/BjornSelling">
 								<svg class="" xmlns="http://www.w3.org/2000/svg" width="22" height="19"
 									viewBox="0 0 22 19">
 									<path fill="currentColor"
 										d="M21.193 1.286c-.857.52-1.804.9-2.816 1.1A4.377 4.377 0 0 0 15.143.954c-2.445 0-4.43 2.034-4.43 4.544 0 .355.038.7.114 1.034-3.682-.19-6.947-1.996-9.134-4.75a4.632 4.632 0 0 0-.6 2.288c0 1.576.782 2.967 1.972 3.782a4.372 4.372 0 0 1-2.01-.567v.056c0 2.203 1.53 4.04 3.558 4.456-.372.107-.764.16-1.168.16a4.32 4.32 0 0 1-.834-.08c.565 1.805 2.2 3.12 4.14 3.154a8.746 8.746 0 0 1-5.504 1.946c-.357 0-.71-.02-1.057-.062a12.331 12.331 0 0 0 6.792 2.04c8.152 0 12.61-6.923 12.61-12.93 0-.197-.005-.394-.012-.588a9.126 9.126 0 0 0 2.21-2.35 8.74 8.74 0 0 1-2.545.714 4.538 4.538 0 0 0 1.948-2.514" />
-									</svg>
+								</svg>
 							</a>
 							<a class="socialIcons" href="https://www.linkedin.com/company/24778105/">
 								<svg version="1.1" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" width="22"
