Landing page now redirects to subpages for brf and E contact forms

--- a/index.html
+++ b/index.html
@@ -466,28 +466,9 @@
 									<p class="common-BodyTitle2">Redo att boka? Lämna ett meddelande så hjälper vi dig!
 									</p>
 									<a class="typeform-share common-Button blue text-white margin-bottom-2"
-										href="https://besiktningsman-se.typeform.com/to/vHXN4C" data-mode="drawer_left"
-										target="_blank">
+										href="tjanster/entreprenad/#boka">
 										Lämna ett meddelande
 									</a>
-									<!-- typeform JS -->
-									<script>
-										(function () {
-											var qs, js, q, s, d = document,
-												gi = d.getElementById,
-												ce = d.createElement,
-												gt = d.getElementsByTagName,
-												id = "typef_orm_share",
-												b = "https://embed.typeform.com/";
-											if (!gi.call(d, id)) {
-												js = ce.call(d, "script");
-												js.id = id;
-												js.src = b + "embed.js";
-												q = gt.call(d, "script")[0];
-												q.parentNode.insertBefore(js, q)
-											}
-										})()
-									</script>
 									<a href="tel:0101654000">
 										<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
 									</a>
@@ -508,7 +489,8 @@
 	</section>
 
 	<!-- ESTATES -->
-	<section class="slide whiteSlide fromRight autoHeight" name="brf" data-name="brf" data-title="brf" id="brf">
+	<section class="slide fromRight autoHeight" name="brf" data-name="brf" data-title="brf" id="brf"
+		style="background: #f6f9fc;">
 		<div class="content">
 			<div class="container">
 				<div class="wrap">
@@ -529,29 +511,9 @@
 									</a>
 									<!-- typeform button -->
 									<p class="common-BodyTitle2">Redo att boka? Hör gärna av dig så hjälper vi till!</p>
-									<a class="typeform-share common-Button blue text-white margin-bottom-2"
-										href="https://besiktningsman-se.typeform.com/to/DNqlji" data-mode="drawer_left"
-										target="_blank">
+									<a class="common-Button blue text-white margin-bottom-2" href="tjanster/brf/#boka">
 										Lämna ett meddelande
 									</a>
-									<!-- typeform JS -->
-									<script>
-										(function () {
-											var qs, js, q, s, d = document,
-												gi = d.getElementById,
-												ce = d.createElement,
-												gt = d.getElementsByTagName,
-												id = "typef_orm_share",
-												b = "https://embed.typeform.com/";
-											if (!gi.call(d, id)) {
-												js = ce.call(d, "script");
-												js.id = id;
-												js.src = b + "embed.js";
-												q = gt.call(d, "script")[0];
-												q.parentNode.insertBefore(js, q)
-											}
-										})()
-									</script>
 									<a href="tel:0101654000">
 										<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
 									</a>
