--- a/tjanster/entreprenad/index.html
+++ b/tjanster/entreprenad/index.html
@@ -383,34 +383,7 @@
 										eller gäller
 										principer eller kvalitetskrav för utförandet, sk normerande besiktning.”
 									</p>
-									<!-- typeform button -->
-									<p class="bold">Redo att boka? Lämna ett meddelande så hjälper vi dig!</p>
-									<a class="typeform-share common-Button blue text-white margin-bottom-2"
-										href="https://besiktningsman-se.typeform.com/to/vHXN4C" data-mode="drawer_left"
-										target="_blank">
-										Lämna ett meddelande
-									</a>
-									<!-- typeform JS -->
-									<script>
-										(function () {
-											var qs, js, q, s, d = document,
-												gi = d.getElementById,
-												ce = d.createElement,
-												gt = d.getElementsByTagName,
-												id = "typef_orm_share",
-												b = "https://embed.typeform.com/";
-											if (!gi.call(d, id)) {
-												js = ce.call(d, "script");
-												js.id = id;
-												js.src = b + "embed.js";
-												q = gt.call(d, "script")[0];
-												q.parentNode.insertBefore(js, q)
-											}
-										})()
-									</script>
-									<a href="tel:0101654000">
-										<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
-									</a>
+
 								</li>
 							</ul>
 						</div>
@@ -497,34 +470,7 @@
 									<p>Begreppet ”uppenbarligen” innebär att det enligt besiktningsmannens bedömning ska
 										framstå som fullständigt klart att entreprenaden i det skick den är inte kan
 										komma att godkännas.”</p>
-									<!-- typeform button -->
-									<p class="bold">Redo att boka? Lämna ett meddelande så hjälper vi dig!</p>
-									<a class="typeform-share common-Button blue text-white margin-bottom-2"
-										href="https://besiktningsman-se.typeform.com/to/vHXN4C" data-mode="drawer_left"
-										target="_blank">
-										Lämna ett meddelande
-									</a>
-									<!-- typeform JS -->
-									<script>
-										(function () {
-											var qs, js, q, s, d = document,
-												gi = d.getElementById,
-												ce = d.createElement,
-												gt = d.getElementsByTagName,
-												id = "typef_orm_share",
-												b = "https://embed.typeform.com/";
-											if (!gi.call(d, id)) {
-												js = ce.call(d, "script");
-												js.id = id;
-												js.src = b + "embed.js";
-												q = gt.call(d, "script")[0];
-												q.parentNode.insertBefore(js, q)
-											}
-										})()
-									</script>
-									<a href="tel:0101654000">
-										<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
-									</a>
+
 								</li>
 							</ul>
 						</div>
@@ -574,34 +520,7 @@
 										<br>Entreprenören avgör vilken tid som behövs för avhjälpande och avropar i god
 										tid när entreprenaden är färdig för fortsatt slutbesiktning.
 									</p>
-									<!-- typeform button -->
-									<p class="bold">Redo att boka? Lämna ett meddelande så hjälper vi dig!</p>
-									<a class="typeform-share common-Button blue text-white margin-bottom-2"
-										href="https://besiktningsman-se.typeform.com/to/vHXN4C" data-mode="drawer_left"
-										target="_blank">
-										Lämna ett meddelande
-									</a>
-									<!-- typeform JS -->
-									<script>
-										(function () {
-											var qs, js, q, s, d = document,
-												gi = d.getElementById,
-												ce = d.createElement,
-												gt = d.getElementsByTagName,
-												id = "typef_orm_share",
-												b = "https://embed.typeform.com/";
-											if (!gi.call(d, id)) {
-												js = ce.call(d, "script");
-												js.id = id;
-												js.src = b + "embed.js";
-												q = gt.call(d, "script")[0];
-												q.parentNode.insertBefore(js, q)
-											}
-										})()
-									</script>
-									<a href="tel:0101654000">
-										<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
-									</a>
+
 								</li>
 							</ul>
 						</div>
@@ -655,34 +574,7 @@
 										besiktning,
 										om detta angivits i kallelsen.”
 									</p>
-									<!-- typeform button -->
-									<p class="bold">Redo att boka? Lämna ett meddelande så hjälper vi dig!</p>
-									<a class="typeform-share common-Button blue text-white margin-bottom-2"
-										href="https://besiktningsman-se.typeform.com/to/vHXN4C" data-mode="drawer_left"
-										target="_blank">
-										Lämna ett meddelande
-									</a>
-									<!-- typeform JS -->
-									<script>
-										(function () {
-											var qs, js, q, s, d = document,
-												gi = d.getElementById,
-												ce = d.createElement,
-												gt = d.getElementsByTagName,
-												id = "typef_orm_share",
-												b = "https://embed.typeform.com/";
-											if (!gi.call(d, id)) {
-												js = ce.call(d, "script");
-												js.id = id;
-												js.src = b + "embed.js";
-												q = gt.call(d, "script")[0];
-												q.parentNode.insertBefore(js, q)
-											}
-										})()
-									</script>
-									<a href="tel:0101654000">
-										<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
-									</a>
+
 								</li>
 							</ul>
 						</div>
@@ -728,34 +620,7 @@
 										garantitiden och där garantiansvar eventuellt föreligger, och dels sådana fel
 										som framträtt efter garantitidens utgång men inom den 10-åriga ansvarstiden.”
 									</p>
-									<!-- typeform button -->
-									<p class="bold">Redo att boka? Lämna ett meddelande så hjälper vi dig!</p>
-									<a class="typeform-share common-Button blue text-white margin-bottom-2"
-										href="https://besiktningsman-se.typeform.com/to/vHXN4C" data-mode="drawer_left"
-										target="_blank">
-										Lämna ett meddelande
-									</a>
-									<!-- typeform JS -->
-									<script>
-										(function () {
-											var qs, js, q, s, d = document,
-												gi = d.getElementById,
-												ce = d.createElement,
-												gt = d.getElementsByTagName,
-												id = "typef_orm_share",
-												b = "https://embed.typeform.com/";
-											if (!gi.call(d, id)) {
-												js = ce.call(d, "script");
-												js.id = id;
-												js.src = b + "embed.js";
-												q = gt.call(d, "script")[0];
-												q.parentNode.insertBefore(js, q)
-											}
-										})()
-									</script>
-									<a href="tel:0101654000">
-										<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
-									</a>
+
 								</li>
 							</ul>
 						</div>
@@ -805,34 +670,7 @@
 										<br>Vid bokning av garantibesiktning kan ni tilläggsbeställa att även
 										efterbesiktning av tidigare besiktning ska utföras.
 									</p>
-									<!-- typeform button -->
-									<p class="bold">Redo att boka? Lämna ett meddelande så hjälper vi dig!</p>
-									<a class="typeform-share common-Button blue text-white margin-bottom-2"
-										href="https://besiktningsman-se.typeform.com/to/vHXN4C" data-mode="drawer_left"
-										target="_blank">
-										Lämna ett meddelande
-									</a>
-									<!-- typeform JS -->
-									<script>
-										(function () {
-											var qs, js, q, s, d = document,
-												gi = d.getElementById,
-												ce = d.createElement,
-												gt = d.getElementsByTagName,
-												id = "typef_orm_share",
-												b = "https://embed.typeform.com/";
-											if (!gi.call(d, id)) {
-												js = ce.call(d, "script");
-												js.id = id;
-												js.src = b + "embed.js";
-												q = gt.call(d, "script")[0];
-												q.parentNode.insertBefore(js, q)
-											}
-										})()
-									</script>
-									<a href="tel:0101654000">
-										<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
-									</a>
+
 								</li>
 							</ul>
 						</div>
@@ -875,34 +713,7 @@
 										ordförande.
 										Ledamot får inte tidigare ha verkställt besiktning i entreprenaden. ”
 									</p>
-									<!-- typeform button -->
-									<p class="bold">Redo att boka? Lämna ett meddelande så hjälper vi dig!</p>
-									<a class="typeform-share common-Button blue text-white margin-bottom-2"
-										href="https://besiktningsman-se.typeform.com/to/vHXN4C" data-mode="drawer_left"
-										target="_blank">
-										Lämna ett meddelande
-									</a>
-									<!-- typeform JS -->
-									<script>
-										(function () {
-											var qs, js, q, s, d = document,
-												gi = d.getElementById,
-												ce = d.createElement,
-												gt = d.getElementsByTagName,
-												id = "typef_orm_share",
-												b = "https://embed.typeform.com/";
-											if (!gi.call(d, id)) {
-												js = ce.call(d, "script");
-												js.id = id;
-												js.src = b + "embed.js";
-												q = gt.call(d, "script")[0];
-												q.parentNode.insertBefore(js, q)
-											}
-										})()
-									</script>
-									<a href="tel:0101654000">
-										<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
-									</a>
+
 								</li>
 							</ul>
 						</div>
@@ -962,34 +773,7 @@
 									<p>För att bli certifierad krävs kunskap, erfarenhet och lämplighet för uppgiften.
 										Certifieringar får endast utfärdas av certifieringsorgan, det vill säga företag
 										som har ackrediterats för denna uppgift av myndigheten Swedac.</p>
-									<!-- typeform button -->
-									<p class="bold">Redo att boka? Lämna ett meddelande så hjälper vi dig!</p>
-									<a class="typeform-share common-Button blue text-white margin-bottom-2"
-										href="https://besiktningsman-se.typeform.com/to/vHXN4C" data-mode="drawer_left"
-										target="_blank">
-										Lämna ett meddelande
-									</a>
-									<!-- typeform JS -->
-									<script>
-										(function () {
-											var qs, js, q, s, d = document,
-												gi = d.getElementById,
-												ce = d.createElement,
-												gt = d.getElementsByTagName,
-												id = "typef_orm_share",
-												b = "https://embed.typeform.com/";
-											if (!gi.call(d, id)) {
-												js = ce.call(d, "script");
-												js.id = id;
-												js.src = b + "embed.js";
-												q = gt.call(d, "script")[0];
-												q.parentNode.insertBefore(js, q)
-											}
-										})()
-									</script>
-									<a href="tel:0101654000">
-										<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
-									</a>
+
 								</li>
 							</ul>
 						</div>
@@ -1023,34 +807,7 @@
 										part avseende entreprenadens status i visst avseende, även om det saknas
 										indikationer om fel.”
 									</p>
-									<!-- typeform button -->
-									<p class="bold">Redo att boka? Lämna ett meddelande så hjälper vi dig!</p>
-									<a class="typeform-share common-Button blue text-white margin-bottom-2"
-										href="https://besiktningsman-se.typeform.com/to/vHXN4C" data-mode="drawer_left"
-										target="_blank">
-										Lämna ett meddelande
-									</a>
-									<!-- typeform JS -->
-									<script>
-										(function () {
-											var qs, js, q, s, d = document,
-												gi = d.getElementById,
-												ce = d.createElement,
-												gt = d.getElementsByTagName,
-												id = "typef_orm_share",
-												b = "https://embed.typeform.com/";
-											if (!gi.call(d, id)) {
-												js = ce.call(d, "script");
-												js.id = id;
-												js.src = b + "embed.js";
-												q = gt.call(d, "script")[0];
-												q.parentNode.insertBefore(js, q)
-											}
-										})()
-									</script>
-									<a href="tel:0101654000">
-										<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
-									</a>
+
 								</li>
 							</ul>
 						</div>
@@ -1115,34 +872,7 @@
 										vanligt att fukt från underliggande mark transportas upp i betongplattan och
 										vidare upp i uppreglat golv.
 									</p>
-									<!-- typeform button -->
-									<p class="bold">Redo att boka? Lämna ett meddelande så hjälper vi dig!</p>
-									<a class="typeform-share common-Button blue text-white margin-bottom-2"
-										href="https://besiktningsman-se.typeform.com/to/vHXN4C" data-mode="drawer_left"
-										target="_blank">
-										Lämna ett meddelande
-									</a>
-									<!-- typeform JS -->
-									<script>
-										(function () {
-											var qs, js, q, s, d = document,
-												gi = d.getElementById,
-												ce = d.createElement,
-												gt = d.getElementsByTagName,
-												id = "typef_orm_share",
-												b = "https://embed.typeform.com/";
-											if (!gi.call(d, id)) {
-												js = ce.call(d, "script");
-												js.id = id;
-												js.src = b + "embed.js";
-												q = gt.call(d, "script")[0];
-												q.parentNode.insertBefore(js, q)
-											}
-										})()
-									</script>
-									<a href="tel:0101654000">
-										<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
-									</a>
+
 								</li>
 							</ul>
 						</div>
@@ -1197,56 +927,17 @@
 										ventilationssystem som upptäcks vid OVK eller annars under byggnadens brukstid
 										åtgärdas omgående.”
 									</p>
-									<!-- typeform button -->
-									<p class="bold">Redo att boka? Lämna ett meddelande så hjälper vi dig!</p>
-									<a class="typeform-share common-Button blue text-white margin-bottom-2"
-										href="https://besiktningsman-se.typeform.com/to/vHXN4C" data-mode="drawer_left"
-										target="_blank">
-										Lämna ett meddelande
-									</a>
-									<!-- typeform JS -->
-									<script>
-										(function () {
-											var qs, js, q, s, d = document,
-												gi = d.getElementById,
-												ce = d.createElement,
-												gt = d.getElementsByTagName,
-												id = "typef_orm_share",
-												b = "https://embed.typeform.com/";
-											if (!gi.call(d, id)) {
-												js = ce.call(d, "script");
-												js.id = id;
-												js.src = b + "embed.js";
-												q = gt.call(d, "script")[0];
-												q.parentNode.insertBefore(js, q)
-											}
-										})()
-									</script>
-									<a href="tel:0101654000">
-										<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
-									</a>
+
 								</li>
 							</ul>
 						</div>
 					</div>
 				</div>
-				<!-- <br>
-				<br>
-				<div class="fix-10-12 left margin-bottom-3">
-					<h3 class="margin-0">Redo att sätta igång?</h3>
-					<br>
-					<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Gör offertförfrågan</a>
-					<script>
-						!function(){var e,t,a,l,s=document,r=s.getElementById,c=s.createElement,n=s.getElementsByTagName,m="typef_orm_share",o="https://s3-eu-west-1.amazonaws.com/share.typeform.com/";r.call(s,m)||((t=c.call(s,"script")).id=m,t.src=o+"share.js",(a=n.call(s,"script")[0]).parentNode.insertBefore(t,a)),m+="_",r.call(s,m)||((e=c.call(s,"link")).rel="stylesheet",e.id=m,e.href=o+"share-button.css",(l=n.call(s,"head")[0]).appendChild(e,l))}();
-					</script>
-					<br>
-					<br>
-					<a href="tel:0101654000" class="bold text-blue">Alternativt ring oss på: 010-165 40 00</a>
-				</div> -->
 			</div>
 		</div>
 	</section>
-	<section class="slide white form-section" data-name="boka" name="boka" data-title="boka" id="boka">
+	<section class="slide form-section" data-name="boka" name="boka" data-title="boka" id="boka"
+		style="background: #f6f9fc;">
 		<div class="container-lg">
 			<div class="pad formBackground form-column">
 				<h3 class="pad-header margin-0 common-BodyTitle2 center">
@@ -1274,8 +965,8 @@
 			</div>
 			<div class="secondary-column">
 				<div class="customers">
-					<p class="copy-1">Du är i gott sällskap.</p>
-					<p class="copy-2">Gör som många andra och anlita Besiktningsman.se</p>
+					<p class="copy-1 common-BodyTitle">Du är i gott sällskap.</p>
+					<p class="copy-2 common-BodyText">Gör som många andra och anlita Besiktningsman.se</p>
 					<ul class="customer-logos">
 						<li class="customer-logo">
 							<img src="../../../assets/img/logos/tjanster/einarmattsson_logo.png" alt="EINAR MATTSSON">
