Adding confirmation page to career as the form shows nothing upon completion

--- a/karriar/index.html
+++ b/karriar/index.html
@@ -243,8 +243,7 @@
 	</div>
 	<!-- HEADER -->
 	<section class="slide form-section" id="career" style="background: transparent;">
-		<h1 class="common-IntroText center margin-top-10">Sveriges ledande entreprenadbesiktningsföretag
-			<br>söker fler
+		<h1 class="common-IntroText center margin-top-10">Sveriges ledande entreprenadbesiktningsföretag<br>söker fler
 			besiktningsmän!</h1>
 		<div class="container-lg">
 			<div class="secondary-column">
