Removed typeform class

--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
 									<!-- typeform button -->
 									<p class="common-BodyTitle2">Redo att boka? Lämna ett meddelande så hjälper vi dig!
 									</p>
-									<a class="typeform-share common-Button blue text-white margin-bottom-2"
+									<a class="common-Button blue text-white margin-bottom-2"
 										href="tjanster/entreprenad/#boka">
 										Lämna ett meddelande
 									</a>
