Center form class added

--- a/skanska/boka/index.html
+++ b/skanska/boka/index.html
@@ -278,20 +278,20 @@
         </div>
 
         <div class="container-lg">
-            <div class="pad formBackground">
+            <div class="pad formBackground margin-0-auto">
                 <h3 class="pad-header margin-0 center common-BodyTitle">
                     Boka besiktning
                 </h3>
                 <div>
                     <div class="form-bg-offset">
                         <!--[if lte IE 8]>
-<script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2-legacy.js"></script>
-<![endif]-->
+                        <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2-legacy.js"></script>
+                        <![endif]-->
                         <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2.js"></script>
                         <script>
                             hbspt.forms.create({
-                                portalId: "6310815",
-                                formId: "27dbbbf9-47c8-4600-9a00-86cd6cf80f39"
+                                portalId: "4367163",
+                                formId: "86c339c5-1f3f-48bb-913c-41d7dd8aad49"
                             });
                         </script>
                     </div>
