Removed form header p + classes

--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -247,8 +247,7 @@
 			<div class="formBackground form-column pad">
 				<h3 class="pad-header margin-0 center common-BodyTitle">
 					Frågor?
-					<p class="small bold dark margin-0" style="font-size: 16px;">Lämna ett meddelande så hör vi av oss.
-					</p>
+					<hr> Lämna ett meddelande så hör vi av oss.
 				</h3>
 				<div>
 					<div class="form-bg-offset">
